# hyos

./: .editorconfig  .gitignore  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
docs/adrs/: 0001-fedora-atomic-base.md  0002-gnome-search-first.md  0003-local-only-v0.md
docs/architecture/: overview.md  runtime.md  search-provider.md  security.md  threat-model.md
docs/dbus/: org.hyos.Documents1.xml  org.hyos.Indexer1.xml  org.hyos.Policy1.xml  org.hyos.Privileged1.xml  org.hyos.Router1.xml
docs/testing/: silverblue-testplan.md
packaging/dbus/: org.hyos.Documents1.service  org.hyos.Indexer1.service  org.hyos.Policy1.service  org.hyos.Router1.service  tech.hyos.SearchProvider.service
packaging/polkit/: tech.hyos.policy
packaging/selinux/: README.md
packaging/systemd/user/: hyos-docd.service  hyos-indexerd.service  hyos-policyd.service  hyos-routerd.service  hyos-search-provider.service
scripts/demo/: demo-v0.1.sh
scripts/dev/: host-setup.sh  session-setup.sh  setup.sh  toolbox-setup.sh
scripts/test/: smoke.sh
services/hyos-docd/: README.md  pyproject.toml
services/hyos-docd/src/hyos_docd/: __main__.py  extractor.py  ollama.py  service.py  xdg.py
services/hyos-indexerd/: README.md  pyproject.toml
services/hyos-policyd/: README.md  pyproject.toml
services/hyos-policyd/src/hyos_policyd/: __main__.py  service.py
services/hyos-routerd/: README.md  pyproject.toml
services/hyos-routerd/src/hyos_routerd/: __main__.py  clients.py  service.py
shell/desktop-files/: tech.hyos.Inspector.desktop  tech.hyos.Writer.desktop
shell/gnome-search-provider/: README.md  pyproject.toml  tech.hyos.SearchProvider.desktop  tech.hyos.SearchProvider.ini
shell/gnome-search-provider/src/hyos_search_provider/: __main__.py  provider.py
shell/search-provider-config/: tech.hyos.SearchProvider.ini
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/app/datenschutz/: page.tsx
src/components/: ContactForm.tsx  Counter.tsx  CustomCursor.tsx  Magnetic.tsx  MobileMenu.tsx  PageLoader.tsx  ScrollToTop.tsx  TextReveal.tsx  Typewriter.tsx
(+6 files in other folders)
