[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyos-routerd"
version = "0.0.1"
description = "HyOS task orchestrator (Session Bus daemon)"
requires-python = ">=3.11"
# Runtime deps: dbus-python, PyGObject — available on Fedora via dnf
# dnf install python3-dbus python3-gobject

[project.scripts]
hyos-routerd = "hyos_routerd.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
